--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo" href="./index.html"
-          ><span class="header-logo-web">Web</span>Studio</a
+          >Web<span class="header-logo-studio">Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a class="header-menu-link">Studio</a>
+            <a href="" class="header-menu-link">Studio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link">Portfolio</a>
+            <a href="" class="header-menu-link">Portfolio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link">Contacts</a>
+            <a href="" class="header-menu-link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -212,7 +212,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html">
-        <span class="footer-logo-web">Web</span>Studio</a
+        Web<span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
