--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a href="" class="header-menu-link">Studio</a>
+            <a href="./index.html" class="header-menu-link">Studio</a>
           </li>
           <li class="header-menu-item">
             <a href="" class="header-menu-link">Portfolio</a>
@@ -57,7 +57,7 @@
         <button class="hero-button" type="button">Order Service</button>
       </section>
       <section class="features">
-        <h2 class="visually-hidden">Overwiew</h2>
+        <h2 hidden>Overwiew</h2>
         <ul class="features-list">
           <li class="features-item">
             <h3 class="features-subtitle">Strategy</h3>
